--- a/.htaccess
+++ b/.htaccess
@@ -6,5 +6,9 @@ RewriteRule ^index/?$ index.php [L]
 RewriteRule ^fasilitas/?$ fasilitas.php [L]
 RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
-RewriteRule ^([A-Za-z0-9_-]+)?$ index.php?pages=$1 [L]
-RewriteRule ^sitemap.xml?$ index.php?page=sitemap.xml [L]
+RewriteRule ^reservasi/?$ reservasi.php [L]
+RewriteRule ^contact/?$ contact.php [L]
+RewriteRule ^login/?$ login.php [L]
+RewriteRule ^register/?$ register.php [L]
+RewriteRule ^Machine/record/?$ Machine/rcd.php [L]
+RewriteRule ^reg_s?$ Flash/register_flash.php [L]
