--- a/Admin/.htaccess
+++ b/Admin/.htaccess
@@ -5,6 +5,8 @@ RewriteRule ^404/?$ 404.php [L]
 RewriteRule ^fasilitas/?$ fasilitas.php [L]
 RewriteRule ^fasilitas/([A-Za-z0-9_-]+)?$ fasilitas.php?type=$1 [L]
 RewriteRule ^fasilitas/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ fasilitas.php?type=$1&id=$2 [L]
+RewriteRule ^reservasi/([A-Za-z0-9_-]+)?$ reservasi.php?type=$1 [L]
+RewriteRule ^reservasi/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ reservasi.php?type=$1&id=$2 [L]
 RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
 RewriteRule ^reservasi/?$ reservasi.php [L]
