--- a/Admin/.htaccess
+++ b/Admin/.htaccess
@@ -11,6 +11,7 @@ RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
 RewriteRule ^reservasi/?$ reservasi.php [L]
 RewriteRule ^contact/?$ contact.php [L]
+RewriteRule ^contact/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ contact.php?type=$1&id=$2 [L]
 RewriteRule ^usermessage/?$ usermessage.php [L]
 RewriteRule ^memberlist/?$ memberlist.php [L]
 RewriteRule ^postmessage/?$ postmessage.php [L]
