--- a/Admin/.htaccess
+++ b/Admin/.htaccess
@@ -7,6 +7,7 @@ RewriteRule ^fasilitas/([A-Za-z0-9_-]+)?$ fasilitas.php?type=$1 [L]
 RewriteRule ^fasilitas/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ fasilitas.php?type=$1&id=$2 [L]
 RewriteRule ^reservasi/([A-Za-z0-9_-]+)?$ reservasi.php?type=$1 [L]
 RewriteRule ^reservasi/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ reservasi.php?type=$1&id=$2 [L]
+RewriteRule ^memberlist/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ memberlist.php?type=$1&id=$2 [L]
 RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
 RewriteRule ^reservasi/?$ reservasi.php [L]
