--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteRule ^index/?$ index.php [L]
 RewriteRule ^fasilitas/?$ fasilitas.php [L]
 RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
-RewriteRule ^reservasi/?$ reservasi.php [L]
+RewriteRule ^tipekamar/?$ tipekamar.php [L]
 RewriteRule ^contact/?$ contact.php [L]
 RewriteRule ^login/?$ login.php [L]
 RewriteRule ^register/?$ register.php [L]
