bocah asu nilene D bae koe asu

--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,9 @@ RewriteRule ^fasilitas/?$ fasilitas.php [L]
 RewriteRule ^profile/?$ profile.php [L]
 RewriteRule ^maps/?$ maps.php [L]
 RewriteRule ^tipekamar/?$ tipekamar.php [L]
+RewriteRule ^tipekamar/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ tipekamar.php?type=$1&id=$2 [L]
+RewriteRule ^order/?$ order.php [L]
+RewriteRule ^order/([A-Za-z0-9_-]+)/([A-Za-z0-9_-]+)?$ order.php?type=$1&id=$2 [L]
 RewriteRule ^contact/?$ contact.php [L]
 RewriteRule ^login/?$ login.php [L]
 RewriteRule ^register/?$ register.php [L]
